--- a/css.html
+++ b/css.html
@@ -41,5 +41,11 @@ img{
     margin:10px;
     border:solid 1px black;
 }
-
+	
+@media screen and (min-width:512px) {
+    .button_div{
+      width:500px;
+    }
+}
+	
 </style>
